# dj

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.in  dev-requirements.txt  pylintrc  setup.cfg  tox.ini
src/dj/: __init__.py
tests/: test_import.py
tests/dj/: test_dj.py
