[metadata]
name = dj
version = 0.1a
author = Eric Casteleijn
author-email = thisfred@gmail.com
home-page = https://github.com/thisfred/dj
description = dataclasses <-> json
long-description = file: README.md, CHANGELOG.md
license = Hippocratic Licence 2.1
license-file = LICENSE
platform = any
keywords =
classifiers =
    Development Status :: 1 - Planning
    License :: Other/Proprietary License
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed

[options]
include_package_data = true
python_requires = >= 3.8
test_suite = tests
install_requires =
tests_require =
    tox
package_dir=
    =src
packages=find:

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-testmon
    pytest-watch
    tox
dev =
    black
    isort
    mypy
    pre-commit
    pylint
    twine
    wheel
lint =
    pre-commit

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
atomic=true
lines_after_imports=2
lines_between_types=1
known_third_party = pytest

[mypy]
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-tests.*]
disallow_incomplete_defs = False
disallow_untyped_decorators = False
disallow_untyped_defs = False

[flake8]
max_complexity=10
max_line_length=88
