[metadata]
name = dj
version = 0.1a
description = dataclasses <-> json
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric Casteleijn
license = Hippocratic Licence 2.1
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    License :: Other/Proprietary License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed
author-email = thisfred@gmail.com
home-page = https://github.com/thisfred/dj
license-file = LICENSE
long-description = file: README.md, CHANGELOG.md
platform = any

[options]
packages = find:
python_requires = >=3.6
include_package_data = true
package_dir =
    =src
test_suite = tests
tests_require = -r test-requirements.txt

[options.packages.find]
where = src

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[tool:isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
atomic = true
lines_after_imports = 2
lines_between_types = 1
known_third_party = pytest

[mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_decorators = false
disallow_untyped_defs = false

[flake8]
max_complexity = 10
max_line_length = 88
